profilelist1exp/unpackaged/objects/Customer_Engagement__c.object
<CustomObject>
    <fields>
        <fullName>Related_CE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If your customer has already attended a Customer Engagement, please link that CE record to this request</inlineHelpText>
        <label>Related Customer Engagement</label>
        <referenceTo>Customer_Engagement__c</referenceTo>
        <relationshipLabel>Customer Engagements – RETIRED</relationshipLabel>
        <relationshipName>Customer_Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Engagements – RETIRED</relationshipLabel>
        <relationshipName>Customer_Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Executive_Presenter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check here if you are requesting an Executive Presenter to be on your agenda (Dir and above)</inlineHelpText>
        <label>Request an Executive Presenter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requestor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of person requesting the event.  If you are the requestor, this should be your name.</inlineHelpText>
        <label>Requestor Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Engagements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduled_RoomF__c</fullName>
        <formula>Calendar_Management__r.Room__r.Name</formula>
        <label>Scheduled Room</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduled Room</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Event_Location__c.Select_Site__c</field>
                <operation>equals</operation>
                <valueField>$Source.Dell_Solution_Center_Site__c</valueField>
            </filterItems>
            <filterItems>
                <field>Event_Location__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Rooms</value>
            </filterItems>
            <filterItems>
                <field>Event_Location__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Event_Location__c</referenceTo>
        <relationshipLabel>Customer Engagements (Scheduled Room) – RETIRED</relationshipLabel>
        <relationshipName>Customer_Engagements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment_Business_Unit__c</fullName>
        <formula>Primary_Account__r.Sales_Channel__r.Segment_Business_Unit_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Name__c</fullName>
        <formula>Primary_Account__r.Sales_Channel__r.Segment_Name__c</formula>
        <label>Segment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Approval_Request_to_ORM__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please make sure a Resource Manager is assigned to this event.  Check this box to send an approval request to the Resource Manager.
Please note you can send the request only once.</inlineHelpText>
        <label>Requires Resource Manager Approval ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SiteF__c</fullName>
        <formula>Calendar_Management__r.Site__r.Name</formula>
        <label>Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Changed_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Changed Site To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Event_Location__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sites</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Event_Location__c</referenceTo>
        <relationshipLabel>Customer Engagements (Change Site To) – RETIRED</relationshipLabel>
        <relationshipName>Customer_Engagements4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Email__c</fullName>
        <description>email of the site for Email alerts. updated through WF FU</description>
        <label>Site Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Site_Region__c</fullName>
        <formula>IF($RecordType.Name=&apos;Executive Briefing Center&apos;,Calendar_Management__r.Region__c,TEXT(Dell_Solution_Center_Site__r.Region__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Event_Location__c</referenceTo>
        <relationshipLabel>Customer Engagements (Site) – RETIRED</relationshipLabel>
        <relationshipName>Customer_Engagements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_DateF__c</fullName>
        <formula>Calendar_Management__r.Start_Date__c</formula>
        <label>Confirmed Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Comments__c</fullName>
        <description>Cancel/reject comments from analysts</description>
        <label>Status Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Top_3_Pain_Points__c</fullName>
        <label>Top 3 Pain Points</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trade_Compliant__c</fullName>
        <inlineHelpText>Specify if the Customer is Trade Compliant.
 
It is the account team’s responsibility to ensure that the customer is Trade Compliant prior to their visit.</inlineHelpText>
        <label>Trade Compliant?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Webcast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webcast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>When_will_the_proposed_Solution_go_live__c</fullName>
        <label>When will the proposed Solution go live?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Customer Engagement - RETIRED</label>
    <listViews>
        <fullName>DSC_Assigned_Requests</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONNECTION_SENT.NAME</field>
            <operation>equals</operation>
        </filters>
        <label>DSC Assigned Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>DellSolutionCentersStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DSC_Requests</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>DSC Pending Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>DellSolutionCentersStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dell_Solution_Centers_Scheduling_Queue</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Dell Solution Centers Scheduling Queue</label>
        <language>en_US</language>
        <queue>DellSolutionCentersSchedulingQueue</queue>
        <sharedTo>
            <group>DellSolutionCentersStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Executive_Briefing_Centers</fullName>
        <columns>NAME</columns>
        <columns>Event_TypeF__c</columns>
        <columns>Event_Status__c</columns>
        <columns>Primary_Account__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Start_DateF__c</columns>
        <columns>Requestor_Name__c</columns>
        <columns>SiteF__c</columns>
        <columns>Scheduled_RoomF__c</columns>
        <columns>No_of_Attendees__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Queue</filterScope>
        <label>EBC Scheduling Queue</label>
        <language>en_US</language>
        <queue>ExecutiveBriefingSchedulingQueue</queue>
        <sharedTo>
            <group>ExecutiveBriefingCenterStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Customer_Engagements</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Customer Engagements</label>
        <language>en_US</language>
        <sharedTo>
            <group>DellSolutionCentersStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Santa_Clara_Completed</fullName>
        <columns>Primary_Account__c</columns>
        <columns>NAME</columns>
        <columns>Lead_Architect__c</columns>
        <columns>Confirmed_End_Date__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Site__c</field>
            <operation>contains</operation>
            <value>Santa Clara</value>
        </filters>
        <filters>
            <field>Event_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Santa Clara Completed</label>
        <language>en_US</language>
        <queue>DellSolutionCentersSchedulingQueue</queue>
    </listViews>
    <nameField>
        <label>Customer Engagement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Engagements - RETIRED</pluralLabel>
    <recordTypes>
        <fullName>DSC</fullName>
        <active>true</active>
        <description>Use this record type for: Technical briefing, Hands-On Environment, Design Sessions and Proof of Concepts. Formerly Solution Deep Dive</description>
        <label>Dell Solution Centers</label>
    </recordTypes>
    <recordTypes>
        <fullName>EBC</fullName>
        <active>true</active>
        <description>Use this record type for: Customer Briefing, Field Briefing, Meeting and Tour. Formerly Executive Strategy and Relationship Development</description>
        <label>Executive Briefing Center</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Allow_future_dates_on_Preferred_dates</fullName>
        <active>true</active>
        <description>Validate the “Preferred Start Date” and “Preferred End Date” fields to allow future dates only.</description>
        <errorConditionFormula>AND( 
NOT($Setup.System_Behavior_Bypasser__c.Bypass_Opportunity_VRs__c),
NOT(CONTAINS($Profile.Name , &quot;Customer Engagement&quot;)), RecordType.Name = &apos;Dell Solution Centers&apos;, 
OR(GSL_Start_Date__c &lt; TODAY(), GSL_End_Date__c &lt; TODAY()) 
)</errorConditionFormula>
        <errorMessage>The Preferred Dates chosen occur in the past. Please review your request and updated Preferred Start/End Dates to future dates.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cost_Center_Format_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(Cost_Center__c)) &amp;&amp; LEN( Cost_Center__c) &lt;&gt; 16</errorConditionFormula>
        <errorDisplayField>Cost_Center__c</errorDisplayField>
        <errorMessage>Cost Center Field requireds 16 Characters in format: xxxx-xxxx-xxxxxx</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DSC_ORM_Approval_Email_Validation</fullName>
        <active>true</active>
        <description>Validate for assigned ORM before sending approval email</description>
        <errorConditionFormula>ISBLANK( Resource_Manager__c )  &amp;&amp;  Send_Approval_Request_to_ORM__c = TRUE</errorConditionFormula>
        <errorDisplayField>Resource_Manager__c</errorDisplayField>
        <errorMessage>Please assign ORM before sending approval request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DSC_Proof_of_Concept_Required_Fields_VR</fullName>
        <active>true</active>
        <description>validation for required fields when event type is DSC proof of concept</description>
        <errorConditionFormula>AND( OR( ISPICKVAL( Event_Type__c , &quot;Proof of Concept&quot;)), ISBLANK( Description_of_Proposed_Solution__c ), ISBLANK( When_will_the_proposed_Solution_go_live__c ))</errorConditionFormula>
        <errorMessage>You have requested a Proof of Concept event. Please complete the additional Proof of Concept section below.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Further_Explanation_is_Required</fullName>
        <active>true</active>
        <description>Further Explanation under Participant Feedback is Required to fill-in when any one of the Answers selected is &apos;Neutral&apos; &apos;Disagree&apos; or &apos;Strongly Disagree&apos;</description>
        <errorConditionFormula>AND ( 
Further_Explanation__c =&apos;&apos; , 
(OR ( 
ISPICKVAL(Answer1__c , &apos;Neutral&apos;), 
ISPICKVAL(Answer1__c , &apos;Disagree&apos;), 
ISPICKVAL(Answer1__c , &apos;Strongly Disagree&apos;), 
ISPICKVAL(Answer2__c , &apos;Neutral&apos;), 
ISPICKVAL(Answer2__c , &apos;Disagree&apos;), 
ISPICKVAL(Answer2__c , &apos;Strongly Disagree&apos;), 
ISPICKVAL(Answer3__c , &apos;Neutral&apos;), 
ISPICKVAL(Answer3__c , &apos;Disagree&apos;), 
ISPICKVAL(Answer3__c , &apos;Strongly Disagree&apos;) 
)) 
)</errorConditionFormula>
        <errorMessage>Please Fill-in the ‘Further Explanation’ in Participant Feedback Section since one of your Answers were ‘Neutral’ or ‘Disagree’ or ‘Strongly Disagree’</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Contact_Attending_field_must_be</fullName>
        <active>true</active>
        <description>Primary Contact Attending?” field must be empty when “Primary Contact” field is empty.</description>
        <errorConditionFormula>AND(Primary_Contact__c = null , Primary_Contact_Attending__c = true)</errorConditionFormula>
        <errorDisplayField>Primary_Contact__c</errorDisplayField>
        <errorMessage>If Primary Contact is Attending, please enter Primary Contact</errorMessage>
    </validationRules>
</CustomObject>